package it.unipv.posfw.domain;

public enum LivelloAbbonamento {
	MENSILE,
	SEMESTRALE,
	ANNUALE
}
