package it.unipv.posfw.domain;

public enum TipoAbbonamento {
    BASE,
    PREMIUM
}
